Add movie module

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-THE_MOVIE_DB_API_PATH=https://api.themoviedb.org/3
-THE_MOVIE_DB_API_KEY=17bf21b36a91e1959c27fa4dfb57b2e7
+TMDB_API_PATH=https://api.themoviedb.org/3
+TMDB_API_KEY=17bf21b36a91e1959c27fa4dfb57b2e7
 API_PORT=3000
 DB_PORT=5432
 DB_USER=root
