--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@nestjs/typeorm": "^8.1.3",
     "apollo-server-express": "3.8.1",
     "axios": "0.27.2",
-    "class-transformer": "^0.5.1",
+    "camelcase-keys": "7.0.2",
+    "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "graphql": "16.5.0",
     "graphql-subscriptions": "2.0.0",
@@ -61,6 +62,7 @@
     "ts-loader": "9.3.0",
     "ts-node": "10.8.0",
     "tsconfig-paths": "4.0.0",
+    "type-fest": "2.13.1",
     "typescript": "4.7.2"
   }
 }
