--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
     ports:
-      - "8080:80"
+      - ${PGADMIN_PORT}:80
     volumes:
       - ./pgadmin:/var/lib/pgadmin/data
 volumes:
