--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@dkr/modules/*": ["src/modules/*"],
       "@dkr/shared/*": ["src/shared/*"],
       "@dkr/typeorm/*": ["src/typeorm/*"],
-      "@dkr/gql/*": ["src/gql/*"],
+      "@dkr/gql": ["src/gql/index"],
       "@dkr/common/api/*": ["src/common/api/*"],
       "@dkr/common/typings": ["src/common/typings/index"],
       "@dkr/common/constants": ["src/common/constants/index"]
